UIUX-1450: fix letter spacing on language dropdown

--- a/sugarcrm/styleguide/less/sugar-specific/misc.less
+++ b/sugarcrm/styleguide/less/sugar-specific/misc.less
@@ -455,3 +455,7 @@ hr.soften {
   overflow: scroll;
   width: 100%;
 }
+
+#languageList ul li {
+  letter-spacing: normal;
+}
